<package format="2">
  <name>browser_joystick</name>
  <version>0.1.0</version>
  <description>
  Browser joystick.
  </description>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <!-- You need

  tornado (>= 2.4.1)
  sockjs-tornado

  -->

  <!-- You might also be interested in the
       joystick_drivers stack, but it's not a strict dependency.

           roslocate info joystick_drivers > /tmp/joystick_drivers.rosinstall
           rosinstall ~/ros /tmp/joystick_drivers.rosinstall

  -->

</package>
